# Uni_Work

./: README.md  birthday.cpp  minsort.cpp
Tut_2/: A1  A1.cpp  A3  A3.cpp  A4  A4.cpp  log.txt
Tut_4/: A2  A2.cpp  fmtcode.txt
Tut_4/uebungscode_04/examples/: demo.cpp
Tut_4/uebungscode_04/include/: meine_funktionen.hpp
Tut_4/uebungscode_04/src/: meine_funktionen.cpp
uebungscode_05/examples/: aufg1.cpp  aufg2.cpp  aufg3.cpp
uebungscode_05/include/: minsort_in_place.hpp
uebungscode_05/include/hanoi/: hanoi.hpp  hanoi_loesen.hpp
uebungscode_05/src/: hanoi.cpp  hanoi_loesen.cpp  minsort_in_place.cpp
uebungscode_06/: CMakeLists.txt
uebungscode_06/examples/: aufg1.cpp  aufg2.cpp  aufg3.cpp  bonus.cpp
uebungscode_06/include/: mergesort.hpp
uebungscode_06/include/misc/: hilfsfunktionen.hpp  schnellsort.hpp  zeitmesser.hpp
uebungscode_06/include/simpler_graph/: simpler_graph.hpp
uebungscode_06/src/: hilfsfunktionen.cpp  mergesort.cpp  schnellsort.cpp  simpler_graph.cpp  zeitmesser.cpp
uebungscode_07/: CMakeLists.txt
uebungscode_07/examples/: aufg1.cpp  aufg2.cpp
uebungscode_07/include/simpler_graph/: simpler_graph.hpp
uebungscode_07/src/: simpler_graph.cpp
uebungscode_08/: CMakeLists.txt
uebungscode_08/examples/: aufg1.cpp  aufg2.cpp
uebungscode_08/include/datenstrukturen/: binarytree.hpp  list.hpp  listnode.hpp  treenode.hpp
uebungscode_08/src/: list.cpp  tree.cpp
